Fixed Search Bar not Showing Bug
Added container to the divs then it worked

--- a/Phoodie/www/css/style.css
+++ b/Phoodie/www/css/style.css
@@ -19,6 +19,8 @@
 .searchbar {
 	margin-top: 10px;
 	margin-bottom: 10px;
+	margin-left: 0px;
+
 }
 
 .form-control {
@@ -42,4 +44,8 @@
 
 .popup {
 	width: 75% !important;
+}
+
+.googlemaps{
+
 }
